--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "npx @biomejs/biome lint --write",
+    "format": "npx @biomejs/biome check --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.11",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
