--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Backend",
       "type": "shell",
-      "command": "cd backend && venv\\Scripts\\activate && uvicorn app.main:app --reload",
+      "command": "cd backend; venv\\Scripts\\activate; uvicorn app.main:app --reload",
       "presentation": {
         "reveal": "always",
         "panel": "dedicated",
@@ -14,7 +14,7 @@
     {
       "label": "Frontend",
       "type": "shell",
-      "command": "cd frontend && npm run dev",
+      "command": "cd frontend; npm run dev",
       "presentation": {
         "reveal": "always",
         "panel": "dedicated",
