--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 # FastAPI and server
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
+uvicorn[standard]==0.40.0
 python-multipart==0.0.6
 
 # Database
@@ -14,19 +14,17 @@ pydantic-settings==2.1.0
 email-validator==2.1.0
 
 # Browser Automation
-playwright==1.41.0
-selenium==4.17.2
+playwright==1.57.0
 
-# AI/LLM
-openai==1.10.0
-anthropic==0.18.1
+# Ollama Client
+ollama==0.6.1
+httpx==0.28.1
 
 # Scheduling
-schedule==1.2.0
+apscheduler==3.10.4
 
 # Utilities
 python-dotenv==1.0.0
-httpx==0.26.0
 aiofiles==23.2.1
 pillow==10.2.0
 ruff==0.14.13
@@ -34,6 +32,10 @@ mypy==1.19.1
 
 # Logging
 colorlog==6.8.0
+
+# CORS
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 
 # Testing (optional)
 # pytest==7.4.4
