update: adapt solution with cloud browser use

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,3 +5,12 @@ lint.select = ["E", "F", "I", "B"]
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+explicit_package_bases = true
+namespace_packages = true
+ignore_missing_imports = true
