--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,7 +17,7 @@ ALLOWED_ORIGINS=http://localhost:5173
 HEADLESS_BROWSER=false
 BROWSER_TIMEOUT=30000
 
-USE_BROWSER_USE=true
+# Browser Use Cloud (my primary solution)
 BROWSER_USE_API_KEY=browser_use_api_key
 USE_BROWSER_USE_CLOUD=true
 
